<resources>
    <string name="address">Address</string>
    <string name="address_details">Address details</string>
    <string name="address_formatted">%1$s, %2$s, %3$s</string>
    <string name="age">Age</string>
    <string name="birth_date">Birth date</string>
    <string name="blood_group">Blood group</string>
    <string name="camera_permission_rational_confirm_btn">Allow camera</string>
    <string name="camera_permission_rational_description">Camera access is needed to take photos in the app. Please allow camera access to continue</string>
    <string name="camera_permission_rational_title">Allow camera access</string>
    <string name="contact">Contact</string>
    <string name="coordinates">Coordinates</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="country">Country</string>
    <string name="eyes">Eyes</string>
    <string name="gender">Gender</string>
    <string name="hair_color">Hair color</string>
    <string name="hair_type">Hair type</string>
    <string name="height">Height</string>
    <string name="height_value">%1$s cm</string>
    <string name="introduce_credentials_description">Please introduce your credentials to sign in</string>
    <string name="location">Location</string>
    <string name="logout">Logout</string>
    <string name="map_image_of_user_location">Map image of user location</string>
    <string name="open_in_maps">Open in Maps</string>
    <string name="password">Password</string>
    <string name="personal">Personal</string>
    <string name="physical">Physical</string>
    <string name="retry">Retry</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="update_profile_picture">Update profile picture</string>
    <string name="username">Username</string>
    <string name="weight">Weight</string>
    <string name="weight_value">%1$s kg</string>
    <string name="welcome_back">Welcome Back</string>
</resources>