<resources>
    <string name="app_name">Retail Hub</string>
    <string name="go_to_profile">Go to profile</string>
</resources>